--- a/qh.html
+++ b/qh.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dự án 4</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>QUAng Hùng hết đẹp trai</h1>
-    <h2>Quang Hùng đùa sửa lần 1</h2>
+    <h1>About về QH đẹp zau</h1>
   </body>
 </html>
